--- a/ClinicaSite/Pages/Cadastro.razor
+++ b/ClinicaSite/Pages/Cadastro.razor
@@ -25,14 +25,9 @@
 
 			<div>
 				<label for="nome" class="visually-hidden">Nome</label>
-				<div class="nome-sobrenome-input-main-div">
-					<div class="nome-sobrenome-input-div">
-						<InputText id="nome" class="nome-sobrenome-input" @bind-Value="model.Nome" placeholder="Nome" />
-					</div>
-
-					<div class="nome-sobrenome-input-div">
-						<label for="sobrenome" class="visually-hidden">Sobrenome</label>
-						<InputText id="sobrenome" class="nome-sobrenome-input" @bind-Value="model.Sobrenome" placeholder="Sobrenome" />
+				<div class="nome-completo-input-main-div">
+					<div class="nome-completo-input-div">
+						<InputText id="nome" class="nome-completo-input" @bind-Value="model.NomeCompleto" placeholder="Nome Completo" />
 					</div>
 				</div>
 
