--- a/ClinicaSite/Pages/EditarCadastroPaciente.razor
+++ b/ClinicaSite/Pages/EditarCadastroPaciente.razor
@@ -17,15 +17,10 @@
 			</div>
 
 			<div>
-				<div class="nome-sobrenome-input-main-div">
-					<div class="nome-sobrenome-input-div">
+				<div class="nome-completo-input-main-div">
+					<div class="nome-completo-input-div">
 						<label for="nome" class="form-label">Nome</label>
-						<InputText id="nome" class="nome-sobrenome-input" @bind-Value="Paciente.Nome" placeholder="Nome" />
-					</div>
-
-					<div class="nome-sobrenome-input-div">
-						<label for="sobrenome" class="form-label">Sobrenome</label>
-						<InputText id="sobrenome" class="nome-sobrenome-input" @bind-Value="Paciente.Sobrenome" placeholder="Sobrenome" />
+						<InputText id="nome" class="nome-completo-input" @bind-Value="Paciente.NomeCompleto" placeholder="NomeCompleto" />
 					</div>
 				</div>
 
