--- a/ClinicaSite/Pages/PacienteDetails.razor
+++ b/ClinicaSite/Pages/PacienteDetails.razor
@@ -22,7 +22,7 @@
 				Nome
 			</div>
 			<div>
-				@Paciente!.Nome @Paciente.Sobrenome
+				@Paciente!.NomeCompleto
 			</div>
 		</div>
 		<div class="details-div">
