--- a/ClinicaSite/Pages/Agendamento.razor
+++ b/ClinicaSite/Pages/Agendamento.razor
@@ -36,7 +36,7 @@
                     </div>
                     <div>
                         <InputText id="hora" placeholder="Digite a hora (0 a 23)" @bind-Value="Hora"
-                                   class="fs-5"></InputText>
+                            class="fs-5"></InputText>
                     </div>
                 </div>
                 <div class="mx-4">
@@ -45,14 +45,14 @@
                     </div>
                     <div>
                         <InputText id="minutos" placeholder="Digite os minutos (0 a 59)" @bind-Value="Minutos"
-                                   class="fs-5"></InputText>
+                            class="fs-5"></InputText>
                     </div>
                 </div>
             </div>
 
             <div>
                 <InputTextArea id="descricao" @bind-Value="Consulta.Descricao"
-                               placeholder="Digite uma descrição (Não obrigatório)" class="textarea-input" />
+                    placeholder="Digite uma descrição (Não obrigatório)" class="textarea-input" />
             </div>
 
             <div class="d-flex justify-content-around my-4">
@@ -100,26 +100,16 @@
 
     private async Task PageVerification()
     {
-        if (PacienteId is null)
-        {
-            navManager.NavigateTo("/");
-        }
-
         LoggedInUserId = await userService.GetLoggedInUserId();
 
-        if (LoggedInUserId == Guid.Empty)
+        if (PacienteId is null || LoggedInUserId == Guid.Empty)
         {
             navManager.NavigateTo("/login");
         }
 
         Paciente = await pacienteService.GetPacienteById(new Guid(PacienteId!));
 
-        if (Paciente is null)
-        {
-            navManager.NavigateTo("/");
-        }
-
-        if (Paciente!.ClinicaId != LoggedInUserId)
+        if (Paciente is null || Paciente!.ClinicaId != LoggedInUserId)
         {
             navManager.NavigateTo("/");
         }
