--- a/ClinicaSite/Pages/PacienteDetails.razor
+++ b/ClinicaSite/Pages/PacienteDetails.razor
@@ -192,26 +192,16 @@
 
 	private async Task PageVerification()
 	{
-		if (PacienteId is null)
-		{
-			navManager.NavigateTo("/");	
-		}	
-
 		LoggedInUserId = await userDataService.GetLoggedInUserId();
 
-		if (LoggedInUserId == Guid.Empty)
+		if (PacienteId is null || LoggedInUserId == Guid.Empty)
 		{
 			navManager.NavigateTo("/login");
 		}
 
 		Paciente = await pacienteService.GetPacienteById(new Guid(PacienteId!));
 
-		if (Paciente is null)
-		{
-			navManager.NavigateTo("/");
-		}
-
-		if (Paciente!.ClinicaId != LoggedInUserId)
+		if (Paciente is null || Paciente!.ClinicaId != LoggedInUserId)
 		{
 			navManager.NavigateTo("/");
 		}
